Fixing tabs overlap

--- a/sass/components/_jcaruosel_nav.scss
+++ b/sass/components/_jcaruosel_nav.scss
@@ -36,7 +36,7 @@
 	    	border-bottom: 2px solid transparent;
 	    	background-color: white;
 	    	border-width: 2px;
-	    	z-index: 10;
+	    	z-index: 2;
 
 	    	&:before {
     			z-index: 1;
@@ -115,7 +115,7 @@
 	    border-radius: 10px 10px 0 0;
 	    background-color: white;
 	    border-bottom: 2px solid #689a04;
-	    z-index: 1;
+	    z-index: 5;
 	    display: block !important;
 
 		&:before {
@@ -129,6 +129,7 @@
 		    transform: skew(-24deg);
 		    border-radius: 12px 0 0 0;
 		    border-left: 1px solid #628E2F;
+		    border-bottom: 2px solid #689a04;
 	    }
 	    &:after {
 	    	content: " ";
@@ -141,6 +142,7 @@
 		    transform: skew(24deg);
 		    border-radius: 0 12px 0 0;
 		    border-right: 1px solid #628E2F;
+		    border-bottom: 2px solid #689a04;
 	    }
 	}
 }
