--- a/sass/sp123-omega.styles.scss
+++ b/sass/sp123-omega.styles.scss
@@ -189,6 +189,7 @@
 .pane-node-title {
 	text-align: center;
 	line-height: 1;
+	margin-bottom: 10px;
 }
 
 .pane-node-field-resources {
